<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evento_para"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fecha_escogida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/baseline_calendar_today_24"
                android:text="@string/fecha"
                android:layout_marginStart="10dp"
                app:chipStrokeColor="@color/md_theme_dark_background"/>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_person_outline_24"
            app:startIconContentDescription="@string/presione_para_escribir_el_nombre_de_la_persona"
            android:hint="@string/nombre"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Assist"
            android:id="@+id/chip_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seleccione la Hora"
            app:chipStrokeColor="@color/md_theme_dark_background"
            app:chipIcon="@drawable/baseline_access_time_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_new_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/a_adir" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_new_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cancelar" />

        </LinearLayout>



    </LinearLayout>


</com.google.android.material.card.MaterialCardView>